# django-sample-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  swagger_parameters.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md
config/: settings.py  urls.py
users/: models.py  oauth_views.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_login.py  test_signup.py
